# structre

./: .bread.yml  Cargo.toml  readme.md
crates/structre/: Cargo.toml
crates/structre/src/: lib.rs
crates/structre/tests/: test.rs
crates/structre_proc_macros/: Cargo.toml  mod.rs
crates/structre_tests/: Cargo.toml
crates/structre_tests/tests/: test.rs
src/: lib.rs
src/proc_macros/: Cargo.toml  mod.rs
tests/: test.rs
