[package]
name = "structre"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["src/proc_macros"]

[features]
default = ["unicode", "bytes"]
unicode = ["structre_proc_macros/unicode", "regex/unicode"]
bytes = ["atoi"]

[dependencies]
anyhow = "1.0.66"
atoi = { version = "2.0.0", optional = true }
once_cell = "1.16.0"
regex = { version = "1.7.0", default-features = false, features = ["std"] }
structre_proc_macros = { path = "src/proc_macros" }
