[package]
name = "structre"
version = "0.0.4"
edition = "2021"
license = "ISC"
description = "Static-checked parsing of regexes into structs"
homepage = "https://github.com/andrewbaxter/structre"
repository = "https://github.com/andrewbaxter/structre"
readme = "readme.md"

[workspace]
members = ["src/proc_macros"]

[features]
default = ["unicode"]
unicode = ["structre_proc_macros/unicode", "regex/unicode"]

[dependencies]
regex = { version = "1.7.0", default-features = false, features = ["std"] }
structre_proc_macros = { path = "src/proc_macros", version = "0.0.3" }
