[package]
name = "structre_proc_macros"
version = "0.0.3"
edition = "2021"
license = "ISC"
description = "Static-checked parsing of regexes into structs (helper crate)"
homepage = "https://github.com/andrewbaxter/structre"
repository = "https://github.com/andrewbaxter/structre"
readme = "../../readme.md"

[lib]
proc-macro = true
path = "mod.rs"

[features]
default = ["unicode"]
unicode = []

[dependencies]
litrs = "0.2.3"
proc-macro2 = "1.0.47"
quote = "1.0.21"
regex-syntax = "0.6.28"
syn = "1.0.103"

[dev-dependencies]
genemichaels = "0.1.21"
